@@ -1,6 +1,6 @@
 --- #YAML:1.0
 name:                CGI-Application-Gallery
-version:             1.08
+version:             1.09
 abstract:            ~
 license:             ~
 author:              ~
